--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,12 @@ jobs:
         run: go mod download
 
       # step 4: run test
-      - name: go test
-        run: go test ./...
+      - name: Run coverage
+        run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
+
+      # step 5: upload coverage report
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
 
   # job 2: build and run CLI application
   build:
